@@ -382,182 +382,9 @@ void doNagStuff(void)
 void activate(GApplication *application)
 {
 	ERRDATA
-	printf("XXXXXXXXX\n");
 	if(mainWindow!=NULL)
 		gtk_window_present((GtkWindow*)mainWindow);
-}
-
-GtkWidget* activateMenuInBar(GtkWidget *parent,const gchar *name)
-{
-	GtkWidget	*widg=NULL;
-	if (GTK_IS_CONTAINER(parent))
-		{
-			GList *children=gtk_container_get_children(GTK_CONTAINER(parent));
-			while(children!=NULL)
-				{
-				GtkWidget* widget=NULL;
-				 widget=(GtkWidget*)children->data;
-				if(widget!=NULL)
-					{
-						holdWidget=NULL;
-						widg=findMenu(gtk_menu_item_get_submenu((GtkMenuItem*)widget),name);
-						if(holdWidget!=NULL)
-							{
-								gtk_menu_item_activate((GtkMenuItem*)holdWidget);
-								g_list_free(children);
-								return(NULL);
-							}
-					}
-					children=g_list_next(children);
-				}
-			g_list_free(children);
-		}
-	return NULL;
-}
-
-void doKKCommand(const char *command)
-{
-	const char	*commanddata;
-	char		commandname;
-	long		line;
-	pageStruct	*page=getPageStructByIDFromPage(-1);
-	GtkWidget	*widg=NULL;
-	GtkTextIter	iter;
-	char		buffer[256];
-	FILE		*fp;
-	char		*syscommand;
-	GString		*str;
-
-	commandname=command[5];
-	commanddata=&command[6];
-
-	if(mainWindow!=NULL)
-		gtk_window_present((GtkWindow*)mainWindow);
-
-	switch(commandname)
-		{
-//quit app
-			case 'Q':
-				doShutdown(NULL,NULL,NULL);
-				break;
-//goto line on current page
-			case 'G':
-				line=atoi(commanddata);
-				if(fromGOpen==true)
-					gtk_widget_show_all((GtkWidget*)(GtkTextView*)page->view);
-				gotoLine(NULL,(void*)line);
-				break;
-//search for define
-			case 'S':
-				defSearchFromBar((GtkWidget*)commanddata,NULL);
-				break;
-//switch to tab by name
-			case 'N':
-				for(int j=-0;j<gtk_notebook_get_n_pages(mainNotebook);j++)
-					{
-						page=getPageStructByIDFromPage(j);
-						if(strcmp(page->fileName,commanddata)==0)
-							{
-								gtk_notebook_set_current_page(mainNotebook,j);
-								break;
-							}
-					}
-				break;
-//toggle bookmark
-			case 'B':
-				toggleBookmark(NULL,NULL);
-				break;
-//close current tab
-			case 'C':
-				closeTab(NULL,(void*)-1);
-				break;
-//set user mark
-			case 'U':
-				setUserMark();
-				break;
-			case 'u':
-				removeUserMark();
-				break;
-//select menu
-			case 'M':
-				holdWidget=NULL;
-				activateMenuInBar((GtkWidget*)menuBar,commanddata);
-				break;
-//goto offset at current line
-			case 'O':
-				gtk_text_buffer_get_iter_at_mark((GtkTextBuffer*)page->buffer,&iter,gtk_text_buffer_get_insert((GtkTextBuffer*)page->buffer));
-				gtk_text_iter_set_line_offset(&iter,atoi(commanddata));
-				gtk_text_buffer_place_cursor((GtkTextBuffer*)page->buffer,&iter);
-				break;
-//paste clipboard at current pos
-			case 'P':
-				pasteFromClip(NULL,NULL);
-				break;
-//insert text at current pos
-			case 'I':
-				gtk_text_buffer_insert_at_cursor((GtkTextBuffer*)page->buffer,(const gchar*)commanddata,-1);
-				break;
-//insert newlines at current pos
-			case 'L':
-				sprintf(buffer,"%c",'\n');
-				for(int j=0;j<atoi(commanddata);j++)
-					gtk_text_buffer_insert_at_cursor((GtkTextBuffer*)page->buffer,(const gchar*)buffer,-1);
-				break;			
-//insert file at current pos
-			case 'F':
-				str=g_string_new(NULL);
-				sinkReturn=asprintf(&syscommand,"cat %s",commanddata);
-				fp=popen(syscommand,"r");
-				if(fp!=NULL)
-					{
-						while(fgets(buffer,256,fp))
-							g_string_append_printf(str,"%s",buffer);
-						gtk_text_buffer_insert_at_cursor(GTK_TEXT_BUFFER(page->buffer),str->str,str->len);
-						pclose(fp);
-					}
-				ERRDATA debugFree(&syscommand);
-				g_string_free(str,true);
-				break;
-//print list of open files to file commanddata
-			case 'p':
-			{
-				char			*strarray=NULL;
-				unsigned int	buffersize=1000;
-				char			*pagepath=NULL;
-				FILE			*savestdout;
-				char			nl[2]={'\n',0};
-				char			*com=NULL;
-				strarray=(char*)calloc(buffersize,1);
-				for(int j=0;j<gtk_notebook_get_n_pages(mainNotebook);j++)
-					{
-						pagepath=(char*)(pageStruct*)(getPageStructByIDFromPage(j))->filePath;
-						if(pagepath!=NULL)
-							{
-								if(buffersize<(strlen(strarray)+strlen(pagepath)+2))
-									{
-										buffersize+=1000;
-										strarray=(char*)realloc(strarray,buffersize);
-									}
-								if((pagepath!=NULL) && (strlen(pagepath)>0))
-									{
-										strcat(strarray,pagepath);
-										strcat(strarray,nl);
-									}
-							}
-					}
-				if(strarray!=NULL)
-					{
-						asprintf(&com,"echo -n \"%s\" > %s",strarray,commanddata);
-						system(com);
-						free(com);
-						free(strarray);
-					}
-			}
-				break;
-		}
-
-	if(mainWindow!=NULL)
-		gtk_window_present((GtkWindow*)mainWindow);
+	getMsg();
 }
 
 void open(GApplication *application,GFile** files,gint n_files,const gchar *hint)
@@ -566,7 +393,6 @@ void open(GApplication *application,GFile** files,gint n_files,const gchar *hint
 	char	*filepath=NULL;
 	char	*linenum=NULL;
 	int		line=0;
-	char	*basepart=NULL;
 
 	g_application_hold(application);
 	fromGOpen=true;
@@ -577,16 +403,6 @@ void open(GApplication *application,GFile** files,gint n_files,const gchar *hint
 	for(int i=0; i<n_files; i++)
 		{
 			filepath=g_file_get_path(files[i]);
-			basepart=strstr(filepath,"TELL=");
-			if(basepart!=NULL)
-				{
-					if(strncmp(basepart,"TELL=",5)==0)
-						{
-							doKKCommand(basepart);
-							continue;
-						}
-				}
-
 			linenum=strrchr(filepath,'@');
 			if(linenum!=NULL)
 				{
@@ -741,12 +557,12 @@ int main(int argc, char **argv)
 	singleOverRide=false;
 	loadPluginsFlag=true;
 	loadingSession=false;
-	sessionID=NULL;
+	sessionID=-1;
 
 	GOptionEntry	entries[]=
 {
     {"multiple",'m',0,G_OPTION_ARG_NONE,&singleOverRide,"Multiple instance mode",NULL},
-    {"sessionid",'i',0,G_OPTION_ARG_STRING,&sessionID,"Set an ID to be used for (new) instance",NULL},
+    {"sessionid",'i',0,G_OPTION_ARG_INT,&sessionID,"Set an ID to be used for (new) instance",NULL},
     { "safe",'s',0,G_OPTION_ARG_NONE,&safeflag,"Safe mode(disable all plugins and use new instance )",NULL},
     { NULL }
 };
@@ -766,15 +582,17 @@ int main(int argc, char **argv)
 
 	gtk_init(&argc,&argv);
 
-	if(sessionID==NULL)
+	if(sessionID==-1)
 		sinkReturn=asprintf(&dbusname,"org.keithhedger%i." APPEXECNAME,getWorkspaceNumber());
 	else
-		sinkReturn=asprintf(&dbusname,"org.keithhedger%s." APPEXECNAME,sessionID);
+		sinkReturn=asprintf(&dbusname,"org.keithhedger%i." APPEXECNAME,sessionID);
 
 	if((singleOverRide==true) ||(singleUse==false))
 		mainApp=g_application_new(dbusname,(GApplicationFlags)(G_APPLICATION_NON_UNIQUE|G_APPLICATION_HANDLES_OPEN));
 	else
 		mainApp=g_application_new(dbusname,(GApplicationFlags)(G_APPLICATION_HANDLES_OPEN));
+
+	createQueue();
 
 	g_signal_connect(mainApp,"activate",G_CALLBACK(activate),NULL);
 	g_signal_connect(mainApp,"startup",G_CALLBACK(appStart),NULL);
